--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body{
     font-family: sans-serif;
 }
 
+i{
+    cursor: pointer;
+}
+
 /**
 * ! navbar styling
 **/
@@ -24,6 +28,7 @@ body{
     align-items: center;
     background-color: #e59500;
     color: #fff;
+    margin-bottom: 30px;
 }
 
 .cart{
@@ -44,4 +49,40 @@ body{
     color: #fff;
     padding: 3px;
     border-radius: 3px;
+}
+
+/**
+* ! shop items styling
+**/
+
+.shop{
+    display: grid;
+    grid-template-columns: repeat(4, 223px);
+    gap: 30px;
+    justify-content: center;
+    margin-bottom: 100px;
+}
+.item{
+    border: 1px solid #212121;
+    border-radius: 4px;
+    padding: 5px;
+}
+
+.details{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+}
+
+.price-quantity{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.buttons{
+    display: flex;
+    gap: 8px;
+    font-size: 15px;
 }
